- Checking if a setting has been defined: <if test="!context.contains('environment')">
- explicit error generation and process exit value determination, e.g. <error code=-123>No environment specified</error>
- new Converters:
  - Char2StringConverter
  - EscapingConverter
  - Number2CharConverter
- Added org.databene.commons.format.* to default imports
- Automatic recognition of absolute Windows(TM) paths and Unix user home paths
- new consumers:
  - BadDataConsumer
  - ListConsumer
- Supporting pageSize == 0 (for sub <generation>s without own page /transaction handling)


bug fixes (Find the bug tracker at http://sourceforge.net/tracker2/?group_id=222964&atid=1057386)
-------------------------------------------------------------------------------------------------
- 3089196: The POM for xerces:XercesImpl:jar:2.9.1 is missing
- 3089078: Generated projects do not have an SLF4J binding
- 3089073: Bug in Timestamp format for second resolution
- 3157407: 'dataset' is not applied to StreetNameGenerator
- 3108933: nullQuota is not applied when using a script
- 3075892: Initialization fails with PostgreSQL
- 3075401: boolean value generation problem in postgresql 8.4
- NullPointerException on empty catalog name (PostgreSQL)
- DateTimeGenerator does not respect daylight savings times
- bugs in the demo folders
- time generation offset of DateTimeGenerator
- shutdown hook handling
- decimal number formatting in FlatFileEntityExporter
- big_decimal generation in sequences
- Script-based Distribution support in properties
- bug in evaluating minCount after task execution
- precision support in 'cumulated' sequence
- Empty weighted CSV causes ArrayIndexException
- Benerator Project Wizard crashes when the fields 'encoding', 'locale', 'line separator' or 'dataset' are empty
- Wrong distribution assembly:
  - missing database drivers 
  - duplicate jar and test source
  - superfluous __MACOSX artifacts